fix filter overlap and default filter value

--- a/wp-content/themes/makerfaire/less/meet-the-makers-new.less
+++ b/wp-content/themes/makerfaire/less/meet-the-makers-new.less
@@ -149,6 +149,16 @@
 				}
 			}
 		}
+		.filter-section {
+			@media (min-width:768px) and (max-width:996px) {
+				margin-top: -10px;
+				text-align: left;
+				padding-left: 60px;
+				.dropdown-toggle {
+					padding: .34em 2em;
+				}
+			}
+		}
 		label {
 			color: #555;
 			position: relative;
@@ -187,7 +197,9 @@
       .dropdown {
          display: inline-block;
          margin-right: 30%;
+			margin-top: -2px;
          float: right;
+			width: 100%;
          @media (max-width: 768px) {
             float: none;
 				margin-right: auto;
@@ -209,6 +221,9 @@
             overflow-y: scroll;
          }
       }
+		.topic-menu li:nth-of-type(3){ // make the default --select maker category-- invisible
+		  display: none;
+	  }
    }
 
    .mtm-results {      
